--- a/boutique/templates/boutique/pages/navbar.html
+++ b/boutique/templates/boutique/pages/navbar.html
@@ -7,7 +7,7 @@
         <div class="col-1 col-md-3 col-lg-3 py-0 my-0 text-left">
           <span>
             <a href="https://www.facebook.com/d-modules/" target="_blank">
-              <i class="fab fa-facebook" aria-hidden="true"></i>
+              <i class="icon-social-facebook" aria-hidden="true"></i>
             </a>
           </span>
         </div>
@@ -21,10 +21,10 @@
         </div>
         <div class="col-11 col-md-5 col-lg-3 py-0 my-0 text-right">
           <span class="drawer-toggle" data-dm="user">
-            <i class="fa fa-user"></i>
+            <i class="icon-user"></i>
           </span>
           <span class="drawer-toggle dm-cart" data-dm="cart">
-            <i class="fa fa-shopping-cart"></i>
+            <i class="icon-basket-loaded"></i>
             <span id="dm-cart-items">0</span>
           </span>
         </div>
