--- a/boutique/templates/clients/d-shop/pages/contact.html
+++ b/boutique/templates/clients/d-shop/pages/contact.html
@@ -52,7 +52,7 @@
           </div>
           <p class="leads">Remplissez ce formulaire pour nous contacter.</p>
           <div class="field_form dm-contact">
-            <form method="post" name="enq" action="/fr/sendemail/">
+            <form method="post" name="enq" action="/sendemail/">
               {% csrf_token %}
               <div class="row">
                 <div class="form-group col-md-6">
