--- a/boutique/templates/clients/d-shop/pages/produits.html
+++ b/boutique/templates/clients/d-shop/pages/produits.html
@@ -147,7 +147,7 @@
             {% endif %}
           </div>
         </div>
-        <div class="col-lg-3 order-lg-first mt-4 pt-2 mt-lg-0 pt-lg-0">
+        <div class="col-lg-3 order-lg-first mt-4 pt-2 mt-lg-0 pt-lg-0 d-none d-lg-block">
           <div class="sidebar">
             <div class="widget">
               <h5 class="widget_title">Catégories</h5>
