--- a/boutique/static/boutique/css/dmodules.css
+++ b/boutique/static/boutique/css/dmodules.css
@@ -335,6 +335,12 @@ body{
   padding:0 0 0 6px;
 }
 
+/* ===--- Vos commandes ---=== */
+.service-content-box pre{
+  border-left:2px solid #41b6e6;
+  padding-left:1rem;
+}
+
 /* ===--- Breadcrumbs ---=== */
 .breadcrumbs-item a + a{
   border-left:1px solid #202325;
@@ -351,8 +357,9 @@ body{
 #snackbar{
   background-color:rgba(0, 0, 0, 0.9);
   border-radius:6px;
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.5);
   color:#fff;
-  font-size:1.4rem;
+  font-size:1.2rem;
   line-height:150%;
   display:inline-block;
   width:300px;
