--- a/boutique/templates/boutique/navbar/menu-parent.html
+++ b/boutique/templates/boutique/navbar/menu-parent.html
@@ -4,25 +4,27 @@
   {% if child.get_menu_title == 'Produits' %}
     {% dm_get_categories_parents as categories %}
     <li class="nav-item child dm-menu-produits{% if child.selected %} selected{% endif %}{% if child.ancestor %} ancestor{% endif %}{% if child.sibling %} sibling{% endif %}{% if child.descendant %} descendant{% endif %}{% if categories %} dropdown{% endif %}">
-      <a href="{{ child.attr.redirect_url|default:child.get_absolute_url }}" class="nav-link nav_item{% if child.selected %} active{% endif %}">{{ child.get_menu_title }}</a>
-      <div class="dropdown-menu dropdown-reverse">
+      <a class="nav-link nav_item{% if child.selected %} active{% endif %}{% if child.children %} dropdown-toggle{% endif %} dropdown-toggle"{% if child.children %} data-toggle="dropdown"{% endif %} data-toggle="dropdown" href="{{ child.attr.redirect_url|default:child.get_absolute_url }}">{{ child.get_menu_title }}</a>
+      <div class="dropdown-menu dropdown">
         <ul>
           {% for categorie in categories %}
             {% dm_get_category_by_category categorie.id as child_categories %}
             <li>
-              <a href="/produits/{{categorie.id}}-{{categorie.name|slugify}}" class="dropdown-item">
+              <a class="dropdown-item{% if child_categories %} menu-link dropdown-toggler{% else %} nav-link nav_item{% endif %}" href="/produits/{{categorie.id}}-{{categorie.name|slugify}}">
                 {{categorie.name}}
               </a>
               {% if child_categories %}
-                <ul class="sub-menu">
-                  {% for child_category in child_categories %}
-                    <li>
-                      <a href="/produits/{{child_category.id}}-{{child_category.name|slugify}}">
-                        {{child_category.name}}
-                      </a>
-                    </li>
-                  {% endfor %}
-                </ul>
+                <div class="dropdown-menu">
+                  <ul>
+                    {% for child_category in child_categories %}
+                      <li>
+                        <a class="dropdown-item nav-link nav_item" href="/produits/{{child_category.id}}-{{child_category.name|slugify}}">
+                          {{child_category.name}}
+                        </a>
+                      </li>
+                    {% endfor %}
+                  </ul>
+                </div>
               {% endif %}
             </li>
           {% endfor %}
