--- a/boutique/templates/boutique/pages/base.html
+++ b/boutique/templates/boutique/pages/base.html
@@ -20,6 +20,8 @@
     {% endblock main-favicon %}
     {% block main-head %}
       <!-- Fonts -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
       <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet" />
       <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet" />
       <link rel="stylesheet" href="{% static 'boutique/shopwise/css/animate.css' %}" />
@@ -50,6 +52,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'boutique/css/drawer.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'boutique/css/dmodules.css' %}" />
     <!-- Head -->
+    {% block vue-head %}{% endblock vue-head %}
     {% block head %}{% endblock head %}
   </head>
   <body class="drawer drawer--right">
