--- a/boutique/templates/boutique/pages/accueil.html
+++ b/boutique/templates/boutique/pages/accueil.html
@@ -2,6 +2,7 @@
 {% load static thumbnail cms_tags i18n sekizai_tags boutique_tags %}
 
 {% block title %}{% page_attribute "page_title" %}{% endblock %}
+{% block meta-description %}{% page_attribute "meta_description" %}{% endblock %}
 
 {% block breadcrumb %}{% endblock breadcrumb %}
 
