--- a/boutique/templates/clients/d-shop/pages/contact.html
+++ b/boutique/templates/clients/d-shop/pages/contact.html
@@ -1,6 +1,9 @@
 {% extends "boutique/pages/base.html" %}
 {% load static cms_tags i18n sekizai_tags %}
 
+{% block title %}{% page_attribute "page_title" %}{% endblock %}
+{% block meta-description %}{% page_attribute "meta_description" %}{% endblock %}
+
 {% block main-content %}
   <div class="section pb_70">
     <div class="container">
