--- a/boutique/static/boutique/shopwise/css/style.css
+++ b/boutique/static/boutique/shopwise/css/style.css
@@ -920,7 +920,6 @@ button:focus {
 .heading_s4 h1, .heading_s4 h2, .heading_s4 h3, .heading_s4 h4, .heading_s4 h5, .heading_s4 h6 {
 	font-weight: 700;
 	margin: 0;
-	text-transform: capitalize;
 	line-height: normal;
 }
 .heading_s4 .heading_icon i {
@@ -1187,7 +1186,6 @@ button:focus {
 .navbar .navbar-nav > li > .nav-link {
 	font-weight: 500;
 	padding: 22px 10px;
-	text-transform: capitalize;
 	font-size: 14px;
 }
 .navbar .navbar-nav > li > a,
@@ -1214,7 +1212,6 @@ button:focus {
 	padding: 8px 20px 8px 20px;
 	color: #333;
 	font-size: 14px;
-	text-transform: capitalize;
 }
 .navbar .navbar-nav .dropdown-item.dropdown-toggler {
 	padding-right: 30px;
@@ -1606,7 +1603,6 @@ button:focus {
 	font-size: 14px;
 	vertical-align: top;
 	padding: 0 !important;
-	text-transform: capitalize;
 	font-weight: 600;
 }
 .cart_quantity {
@@ -1823,7 +1819,6 @@ button:focus {
 .header_dropdown .dropdown-item {
 	padding: 5px 10px;
 	border-bottom: 1px solid #e6e6e6;
-	text-transform: capitalize;
 }
 .contact_detail li:first-child {
 	margin-left: 0px;
@@ -1983,7 +1978,6 @@ header.light_skin.nav-fixed .social_icons li a:hover {
 	padding: 15px;
 }
 .banne_info a {
-	text-transform: capitalize;
 	position: relative;
 	padding-bottom: 3px;
 	color: #292b2c !important;
@@ -2357,7 +2351,6 @@ input.text {
 	text-transform: uppercase;
 }
 .ddcommon .ddlabel {
-	text-transform: capitalize;
 	font-size: 14px;
 	color: #333;
 	white-space: nowrap;
@@ -2473,7 +2466,6 @@ input.text {
 	width: 100%;
 }
 #navCatContent li a {
-	text-transform: capitalize;
 	font-size: 14px;
 }
 #navCatContent li a i {
@@ -2839,7 +2831,6 @@ input.text {
 	font-size: 60px;
 	margin-bottom: 20px;
 	font-weight: 600;
-	text-transform: capitalize;
 }
 .banner_content p,
 .banner_content2 p {
@@ -2849,19 +2840,16 @@ input.text {
 	font-size: 70px;
 	margin-bottom: 20px;
 	font-weight: 600;
-	text-transform: capitalize;
 }
 .banner_content3 h2 {
 	font-size: 40px;
 	margin-bottom: 20px;
 	font-weight: 600;
-	text-transform: capitalize;
 }
 .banner_content1 h2 {
 	font-size: 78px;
 	margin-bottom: 20px;
 	font-weight: 600;
-	text-transform: capitalize;
 }
 .banner_center_content {
 	margin-top: -70px;
@@ -2956,6 +2944,8 @@ input.text {
   03.START SHOP BANNER STYLE 
 *===================================*/
 .single_banner {
+  width:100%;
+  height:300px;
 	position: relative;
 	overflow: hidden;
 	margin-bottom: 30px;
@@ -2976,6 +2966,11 @@ input.text {
 }
 .single_bn_link {
 	position: relative;
+  opacity:1;
+  transition:opacity 0.3s;
+}
+.single_bn_link:hover {
+	opacity:0.5;
 }
 .single_bn_link::before {
 	content: "";
@@ -3084,7 +3079,6 @@ input.text {
 	display: block;
 }
 .categories_box span {
-	text-transform: capitalize;
 	margin-top: 5px;
 	display: block;
 }
@@ -3279,9 +3273,8 @@ input.text {
 }
 .grid_filter li a {
 	padding: 5px 15px;
-    display: block;
+  display: block;
 	font-size: 16px;
-    text-transform: capitalize;
 }
 .grid_filter li a.current {
 	color: #458d91;
@@ -3429,9 +3422,6 @@ input.text {
 }
 .blog_meta li:last-child {
 	margin-right: 0;
-}
-.blog_meta li a {
-	text-transform: capitalize;
 }
 .blog_meta li a i {
 	margin-right: 5px;
@@ -3598,13 +3588,9 @@ h6.blog_title {
 	font-size: 20px;
 }
 .post_nav .nav_meta {
-	text-transform: capitalize;
 	display: block;
 	font-size: 14px;
 	color: #687188;
-}
-.post_nav {
-	text-transform: capitalize;
 }
 .post_nav_prev {
 	padding-left: 30px;
@@ -3865,7 +3851,6 @@ footer .widget {
 	margin-bottom: 30px;
 }
 footer .widget_title {
-	text-transform: capitalize;
 	margin-top: 10px;
 	margin-bottom: 25px;
 	font-size: 18px;
@@ -4155,7 +4140,6 @@ footer .widget_title {
 }
 .page-title h1 {
 	margin: 0;
-	text-transform: capitalize;
 	font-weight: bold;
 	line-height: normal;
 }
@@ -5199,7 +5183,6 @@ footer .widget_title {
 .pr_action_btn li a {
 	background-color: #fff;
 	font-size: 0;
-	text-transform: capitalize;
 	transition: all 0.3s ease-in-out;
 	width: 37px;
 	height: 37px;
@@ -5222,7 +5205,6 @@ footer .widget_title {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	text-transform: capitalize;
 }
 .product_color_switch span {
 	height: 15px;
@@ -5831,9 +5813,6 @@ footer .widget_title {
 	vertical-align: middle;
 	width: 27%;
 }
-.compare_box table tr td.product_name {
-	text-transform: capitalize;
-}
 .compare_box table tr td.row_title {
 	width: 270px;
 	text-transform: uppercase;
@@ -5865,7 +5844,6 @@ footer .widget_title {
 .shop_cart_table th.product-name, .shop_cart_table td.product-name,
 .wishlist_table th.product-name, .wishlist_table td.product-name {
 	text-align: left;
-	text-transform: capitalize;
 }
 .shop_cart_table .quantity {
 	margin: 0 auto;
@@ -6236,7 +6214,6 @@ select option {
 }
 .widget_title {
 	margin-bottom: 25px;
-	text-transform: capitalize;
 	font-weight: 600;
 	letter-spacing: 0.3px;
 }
@@ -6535,7 +6512,6 @@ footer .widget_recent_post .post_img img {
 	border: 0;
 	font-weight: 500;
 	text-align: center;
-	text-transform: capitalize;
 	padding: 5px 20px;
 }
 .tab-content {
