--- a/boutique/templates/boutique/pages/base.html
+++ b/boutique/templates/boutique/pages/base.html
@@ -103,11 +103,10 @@
                 </div>
                 <div class="widget">
                   <ul class="social_icons social_white">
-                    <li><a href="#" target="_blank"><i class="ion-social-facebook"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="ion-social-googleplus"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="ion-social-youtube-outline"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="ion-social-instagram-outline"></i></a></li>
+                    {% dm_get_socials as socials %}
+                    {% for social in socials %}
+                      <li><a href="{{social.url}}" target="_blank"><i class="{% if social.social == 1 %}ion-social-facebook{% elif social.social == 2 %}ion-social-instagram{% elif social.social == 3 %}ion-social-youtube{% endif %}"></i></a></li>
+                    {% endfor %}
                   </ul>
                 </div>
               </div>
