--- a/boutique/templates/plugins/block-sales-child.html
+++ b/boutique/templates/plugins/block-sales-child.html
@@ -1,7 +1,7 @@
 {% load static cms_tags thumbnail %}
 
 <div class="col-md-6">
-  <div class="single_banner">
+  <div class="single_banner" style="background-color:{{instance.bg_color}}">
     {% if instance.image %}
       {% thumbnail instance.image "540x300" crop upscale as thumb %}
       <img src="{{thumb.url}}" alt="" />
@@ -9,9 +9,9 @@
       <img src="{% static 'boutique/shopwise/images/shop_banner_img1.jpg' %}" alt="" />
     {% endif %}
     <div class="single_banner_info">
-      <h5 class="single_bn_title1">{% if instance.text %}{{instance.text}}{% endif %}</h5>
-      <h3 class="single_bn_title">{% if instance.title %}{{instance.title}}{% endif %}</h3>
-      {% if instance.btn_label %}<a href="{% if instance.btn_url %}{{instance.btn_url}}{% else %}#{% endif %}" class="single_bn_link">{{instance.btn_label}}</a>{% endif %}
+      <h5 class="single_bn_title1" style="color:{{instance.txt_color}}">{% if instance.text %}{{instance.text}}{% endif %}</h5>
+      <h3 class="single_bn_title" style="color:{{instance.txt_color}}">{% if instance.title %}{{instance.title}}{% endif %}</h3>
+      {% if instance.btn_label %}<a href="{% if instance.btn_url %}{{instance.btn_url}}{% else %}#{% endif %}" class="single_bn_link" style="color:{{instance.txt_color}}">{{instance.btn_label}}</a>{% endif %}
     </div>
   </div>
 </div>
