--- a/boutique/templates/boutique/pages/navbar.html
+++ b/boutique/templates/boutique/pages/navbar.html
@@ -5,7 +5,7 @@
     <div class="topnav">
       <div class="row">
         <div class="col-1 col-md-3 col-lg-3 py-0 my-0 text-left">
-          {% dm_get_socials as socials %}
+          {% dm_get_site_socials as socials %}
           {% for social in socials %}
             <span>
               <a href="{{social.url}}" target="_blank">
