--- a/boutique/templates/boutique/pages/contact.html
+++ b/boutique/templates/boutique/pages/contact.html
@@ -70,7 +70,7 @@
           </div>
           <p class="leads">Remplissez ce formulaire pour nous contacter.</p>
           <div class="field_form dm-contact">
-            <form method="post" name="enq" action="/fr/sendemail/">
+            <form method="post" name="enq" action="/contact/formulaire/">
               {% csrf_token %}
               <div class="row">
                 <div class="form-group col-md-6">
