--- a/boutique/templates/plugins/bloc-infolettre.html
+++ b/boutique/templates/plugins/bloc-infolettre.html
@@ -16,7 +16,7 @@
         {% endif %}
         <div class="col-md-6">
           <div class="newsletter_form">
-            <form method="post" name="infolettre" action="/fr/infolettre/">
+            <form method="post" name="infolettre" action="/contact/infolettre/">
               {% csrf_token %}
               <input type="text" required="" id="email_infolettre" name="email_infolettre" class="form-control rounded-0" placeholder="Votre courriel" />
               <input type="text" required="" id="calcul_infolettre" name="calcul_infolettre" class="form-control rounded-0" placeholder="4 + 2 = ?" />
