--- a/boutique/templates/clients/d-shop/catalog/productdefault-detail.html
+++ b/boutique/templates/clients/d-shop/catalog/productdefault-detail.html
@@ -1,5 +1,5 @@
 {% extends "clients/d-shop/catalog/product-detail.html" %}
-{% load static i18n cms_tags thumbnail boutique_tags %}
+{% load static i18n cms_tags thumbnail boutique_tags dmrabais_tags %}
 
 {% block breadcrumb %}
   <section class="section-breadcrumb">
