--- a/boutique/templates/clients/d-shop/pages/produits.html
+++ b/boutique/templates/clients/d-shop/pages/produits.html
@@ -1,5 +1,5 @@
 {% extends "clients/d-shop/pages/base.html" %}
-{% load static cms_tags i18n thumbnail sekizai_tags boutique_tags %}
+{% load static cms_tags i18n thumbnail sekizai_tags boutique_tags dmrabais_tags %}
 
 {% block title %}
   {% if request.resolver_match.kwargs.category_id %}
