--- a/boutique/templates/plugins/products-vedette.html
+++ b/boutique/templates/plugins/products-vedette.html
@@ -1,4 +1,4 @@
- {% load static thumbnail cms_tags i18n boutique_tags %}
+ {% load static thumbnail cms_tags i18n boutique_tags dmrabais_tags %}
 
 <!-- BEGIN: en vedette -->
   <section class="section-vedette">
