--- a/boutique/templates/plugins/products-by-category.html
+++ b/boutique/templates/plugins/products-by-category.html
@@ -1,4 +1,4 @@
-{% load static thumbnail cms_tags i18n boutique_tags %}
+{% load static thumbnail cms_tags i18n boutique_tags dmrabais_tags %}
 
 <!-- BEGIN: par catégorie -->
 <section class="section-parcategorie">
