--- a/dshop/templates/dshop/pages/drawer-user.html
+++ b/dshop/templates/dshop/pages/drawer-user.html
@@ -12,6 +12,9 @@
           <a href="{% page_url 'orders' %}">{% trans 'Vos commandes' %}</a>
         </li>
         <li>
+          <a href="/commande/promocodes/">{% trans 'Promo Codes' %}</a>
+        </li>
+        <li>
           <a href="#" onclick="return dmDrawerDoLogout()">{% trans 'Se déconnecter' %}</a>
         </li>
       </ul>
