--- a/dshop/static/dshop/shopwise/css/style.css
+++ b/dshop/static/dshop/shopwise/css/style.css
@@ -2945,7 +2945,7 @@ input.text {
 *===================================*/
 .single_banner {
   width:100%;
-  height:300px;
+  height:auto;
 	position: relative;
 	overflow: hidden;
 	margin-bottom: 30px;
