--- a/dshop/templates/plugins/block-sales-child.html
+++ b/dshop/templates/plugins/block-sales-child.html
@@ -1,6 +1,6 @@
 {% load static cms_tags thumbnail %}
 
-<div class="col-md-6">
+<div class="col-12 col-lg-6">
   <div class="single_banner" style="background-color:{{instance.bg_color}}">
     {% if instance.image %}
       {% thumbnail instance.image "540x300" crop upscale as thumb %}
