--- a/templates/dshop/catalog/productdefault-detail.html
+++ b/templates/dshop/catalog/productdefault-detail.html
@@ -2,6 +2,6 @@
 
 {% get_setting 'CLIENT_SLUG' as client %}
 
-{% with "clients/"|add:client|add:"/catalog/productdefault-detail.html" as path %}
+{% with "/app/apps/dmTheme/templates/"|add:client|add:"/catalog/productdefault-detail.html" as path %}
   {% include path %}
 {% endwith %}
