--- a/templates/dshop/pages/app.html
+++ b/templates/dshop/pages/app.html
@@ -2,6 +2,6 @@
 
 {% get_setting 'CLIENT_SLUG' as client %}
 
-{% with "clients/"|add:client|add:"/pages/app.html" as path %}
+{% with "/app/apps/dmTheme/templates/"|add:client|add:"/pages/app.html" as path %}
   {% include path %}
 {% endwith %}
