--- a/templates/dshop/catalog/productvariable-detail.html
+++ b/templates/dshop/catalog/productvariable-detail.html
@@ -1,6 +1,6 @@
 {% load dshop_tags %}
 
-{% get_setting 'CLIENT_SLUG' as client %}
+{% get_setting 'THEME_SLUG' as client %}
 
 {% with "/app/apps/dmTheme/templates/theme/"|add:client|add:"/catalog/productvariable-detail.html" as path %}
   {% include path %}
