update frontend urls on footer + auth

--- a/templates/dshop/pages/base.html
+++ b/templates/dshop/pages/base.html
@@ -135,9 +135,9 @@
                 <div class="widget">
                   <h6 class="widget_title">Mon compte</h6>
                   <ul class="widget_links">
-                    <li><a href="/compte/connexion/">Me connecter</a></li>
-                    <li><a href="{% page_url 'orders' %}">Mes commandes</a></li>
-                    <li><a href="/utilisateur/profil/">Profil</a></li>
+                    <li><a href="/commande/profil/">{% trans 'Profile' %}</a></li>
+                    <li><a href="{% page_url 'orders' %}">{% trans 'My Orders' %}</a></li>
+                    <li><a href="/commande/promocodes/">{% trans 'Promo Codes' %}</a></li>
                   </ul>
                 </div>
               </div>
