--- a/apps/dmTheme/templates/theme/default/navbar/navbar.html
+++ b/apps/dmTheme/templates/theme/default/navbar/navbar.html
@@ -23,7 +23,7 @@
           {% endfor %}
         </div>
         <div class="col-6 col-md-5 col-lg-3 py-0 my-0 text-right">
-          <span class="drawer-toggle" data-dm="user">
+          <span class="drawer-toggle dm-user" data-dm="user">
             <i class="icon-user"></i>
           </span>
           <span class="drawer-toggle dm-cart" data-dm="cart">
