--- a/templates/dshop/navbar/menu-parent.html
+++ b/templates/dshop/navbar/menu-parent.html
@@ -1,42 +1,52 @@
 {% load menu_tags dshop_tags %}
 
 {% for child in children %}
-  {% if child.get_menu_title == 'Produits' %}
-    {% dm_get_categories_parents as categories %}
-    <li class="nav-item child dm-menu-produits{% if child.selected %} selected{% endif %}{% if child.ancestor %} ancestor{% endif %}{% if child.sibling %} sibling{% endif %}{% if child.descendant %} descendant{% endif %}{% if categories %} dropdown{% endif %}">
-      <a class="nav-link nav_item{% if child.selected %} active{% endif %}{% if child.children %} dropdown-toggle{% endif %} dropdown-toggle"{% if child.children %} data-toggle="dropdown"{% endif %} data-toggle="dropdown" href="{{ child.attr.redirect_url|default:child.get_absolute_url }}">{{ child.get_menu_title }}</a>
-      <div class="dropdown-menu dropdown">
-        <ul>
-          {% for categorie in categories %}
-            {% dm_get_category_by_category categorie.id as child_categories %}
-            <li>
-              <a class="dropdown-item{% if child_categories %} menu-link dropdown-toggler{% else %} nav-link nav_item{% endif %}" href="/produits/{{categorie.id}}-{{categorie.name|slugify}}">
-                {{categorie.name}}
-              </a>
-              {% if child_categories %}
-                <div class="dropdown-menu">
-                  <ul>
-                    {% for child_category in child_categories %}
-                      <li>
-                        <a class="dropdown-item nav-link nav_item" href="/produits/{{child_category.id}}-{{child_category.name|slugify}}">
-                          {{child_category.name}}
+    {% if child.get_menu_title == 'Produits' %}
+        {% dm_get_categories_parents as categories %}
+        <li class="nav-item child dm-menu-produits{% if child.selected %} selected{% endif %}{% if child.ancestor %} ancestor{% endif %}{% if child.sibling %} sibling{% endif %}{% if child.descendant %} descendant{% endif %}{% if categories %} dropdown{% endif %}">
+            <a class="dm-menu-split nav-link nav_item{% if child.selected %} active{% endif %}" href="{{ child.attr.redirect_url|default:child.get_absolute_url }}">
+                {{ child.get_menu_title }}
+            </a>
+            <a href="#" class="dm-menu-split dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+            </a>
+            <div class="dropdown-menu dropdown">
+                <ul>
+                {% for categorie in categories %}
+                {% dm_get_category_by_category categorie.id as child_categories %}
+                <li>
+                    <a class="dropdown-item{% if child_categories %} menu-link{% else %} nav-link nav_item{% endif %}" href="/produits/{{categorie.id}}-{{categorie.name|slugify}}">
+                        {{categorie.name}}
+                    </a>
+                    {% if child_categories %}
+                        <a href="#" class="dm-menu-split dropdown-toggler dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="sr-only">Toggle Dropdown</span>
                         </a>
-                      </li>
-                    {% endfor %}
-                  </ul>
-                </div>
-              {% endif %}
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </li>
-  {% else %}
-    <li class="nav-item child{% if child.selected %} selected{% endif %}{% if child.ancestor %} ancestor{% endif %}{% if child.sibling %} sibling{% endif %}{% if child.descendant %} descendant{% endif %}{% if child.children %} dropdown{% endif %}">
-      <a href="{{ child.attr.redirect_url|default:child.get_absolute_url }}" class="nav-link nav_item{% if child.selected %} active{% endif %}">{{ child.get_menu_title }}</a>
-      {% if child.children %}
+                        <div class="dropdown-menu">
+                            <ul>
+                                {% for child_category in child_categories %}
+                                <li>
+                                    <a class="dropdown-item nav-link nav_item" href="/produits/{{child_category.id}}-{{child_category.name|slugify}}">
+                                        {{child_category.name}}
+                                    </a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    {% endif %}
+                </li>
+                {% endfor %}
+                </ul>
+            </div>
+        </li>
+    {% else %}
+        <li
+        class="nav-item child{% if child.selected %} selected{% endif %}{% if child.ancestor %} ancestor{% endif %}{% if child.sibling %} sibling{% endif %}{% if child.descendant %} descendant{% endif %}{% if child.children %} dropdown{% endif %}">
+        <a href="{{ child.attr.redirect_url|default:child.get_absolute_url }}"
+            class="nav-link nav_item{% if child.selected %} active{% endif %}">{{ child.get_menu_title }}</a>
+        {% if child.children %}
         {% show_menu from_level to_level extra_inactive extra_active 'dshop/navbar/menu-child.html' "" "" child %}
-      {% endif %}
-    </li>
-  {% endif %}
+        {% endif %}
+        </li>
+    {% endif %}
 {% endfor %}
