--- a/apps/dmTheme/templates/theme/default/pages/message-envoye.html
+++ b/apps/dmTheme/templates/theme/default/pages/message-envoye.html
@@ -1,6 +1,8 @@
 {% extends "/app/apps/dmTheme/templates/theme/default/pages/base.html" %}
 {% load i18n %}
 
+{% block title %}{% trans 'Message envoyé !' %}{% endblock %}
+
 {% block main-content %}
 
   <div class="container py-5">
