--- a/apps/dmTheme/templates/theme/default/navbar/navbar.html
+++ b/apps/dmTheme/templates/theme/default/navbar/navbar.html
@@ -2,37 +2,7 @@
 
 {% spaceless %}
   {% block topnav %}
-    <div class="topnav">
-      <div class="row">
-        <div class="col-6 col-md-3 col-lg-3 py-0 my-0 text-left">
-          {% dm_get_site_socials as socials %}
-          {% for social in socials %}
-            <span>
-              <a href="{{social.url}}" target="_blank">
-                <i class="{% if social.social == 1 %}icon-social-facebook{% elif social.social == 2 %}ion-social-instagram{% elif social.social == 3 %}icon-social-youtube{% endif %}" aria-hidden="true"></i>
-              </a>
-            </span>
-          {% endfor %}
-        </div>
-        <div class="d-none d-md-block col-md-4 col-lg-6 py-0 my-0 text-center">
-          {% get_advertisingtopbanner as alerts %}
-          {% for alert in alerts %}
-            <span class="notif">
-              {% if alert.link %}<a href="{{alert.link}}"{% if alert.open_blank %} target="_blank"{% endif %}>{% endif %}{{alert.text}}{% if alert.link %}</a>{% endif %}
-            </span>
-          {% endfor %}
-        </div>
-        <div class="col-6 col-md-5 col-lg-3 py-0 my-0 text-right">
-          <span class="drawer-toggle dm-user" data-dm="user">
-            <i class="icon-user"></i>
-          </span>
-          <span class="drawer-toggle dm-cart" data-dm="cart">
-            <i class="icon-basket-loaded"></i>
-            <span id="dm-cart-items">0</span>
-          </span>
-        </div>
-      </div>
-    </div>
+    {% include 'dshop/navbar/topnav.html' %}
   {% endblock topnav %}
   {% block tophead %}
     <header class="header_wrap fixed-top header_with_topbar">
@@ -49,7 +19,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
               <ul class="navbar-nav">
-                {% show_menu 0 100 100 100 'dshop/navbar/menu-parent.html' %}
+                {% show_menu 0 100 100 100 '/app/apps/dmTheme/templates/theme/default/navbar/menu-parent.html' %}
               </ul>
             </div>
           </nav>
