--- a/apps/dmTheme/templates/theme/default/pages/search.html
+++ b/apps/dmTheme/templates/theme/default/pages/search.html
@@ -1,6 +1,8 @@
 {% extends "/app/apps/dmTheme/templates/theme/default/pages/base.html" %}
 {% load cms_tags i18n thumbnail %}
 
+{% block title %}{% trans 'Search' %}{% endblock %}
+
 {% block content %}
     <div class="container py-5 mb-5 section-search">
         <div class="row">
