--- a/apps/dmTheme/templates/theme/default/plugins/bloc-infolettre.html
+++ b/apps/dmTheme/templates/theme/default/plugins/bloc-infolettre.html
@@ -2,7 +2,7 @@
 
 <!-- BEGIN: infolettre -->
 <section class="section-infolettre">
-  <div class="section bg_theme/default small_pt small_pb mt-4"{% if instance.image %} style="background-image:url('{{instance.image.url}}');"{% endif %}>
+  <div class="section bg_default small_pt small_pb mt-4"{% if instance.image %} style="background-image:url('{{instance.image.url}}');"{% endif %}>
     <div class="container">
       <div class="row align-items-center">
         {% if instance.title or instance.subtitle or instance.text %}
